--- a/_assets/css/style.css
+++ b/_assets/css/style.css
@@ -35,6 +35,7 @@ i.consultar { background: url("/_assets/img/icons/consultar.png") center no-repe
 i.cancelar { background: url("/_assets/img/icons/cancelar.png") center no-repeat; display: inline-block ; width: 16px;height: 16px;margin-bottom: -3px;margin-right: 4;}
 i.data { background: url("/_assets/img/icons/data.png") center no-repeat; display: inline-block ; width: 16px;height: 16px;margin-bottom: -3px;margin-right: 4;}
 i.entrega { background: url("/_assets/img/icons/entrega.png") center no-repeat; display: inline-block ; width: 16px;height: 16px;margin-right: 4;}
+i.senha { background: url("/_assets/img/icons/senha.png") center no-repeat; display: inline-block ; width: 16px;height: 16px;margin-right: 4;}
 
 
 
